# rdm

./: Cargo.toml  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
src/: main.rs  themes.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/page/: app.rs  home.rs  mod.rs  resize.rs  setting.rs
