[package]
name = "rdm"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
redis = { version = "1.0.0", features = ["tokio-comp"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tokio = { version = "1.32.0", features = ["full"] }
